[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotmem"
version = "0.1.2"
description = "Robot Memory - Persistent memory system for robotic AI agents"
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "robotmem"}]
keywords = [
    "robot", "memory", "mcp", "experience-replay", "episodic-memory",
    "robotics", "spatial-search", "sqlite", "onnx", "offline-first",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0",
    "sqlite-vec>=0.1.6,<0.2.0",
    "fastembed>=0.4",
]

[project.optional-dependencies]
web = ["flask>=3.0"]
ollama = ["httpx>=0.27"]
cjk = ["jieba"]
sb3 = ["stable-baselines3>=2.0"]
gym = ["gymnasium>=0.26"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "flask>=3.0"]

[project.entry-points."lerobot.callbacks"]
robotmem = "robotmem.lerobot:RobotMemCallback"

[project.urls]
Homepage = "https://www.robotmem.com"
Repository = "https://github.com/robotmem/robotmem"
Issues = "https://github.com/robotmem/robotmem/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robotmem = ["templates/*.html", "static/**/*"]
