<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotmem_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 node for robotmem — robot experience memory system</description>
  <maintainer email="gadesawnordeatine@gmail.com">gladego</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>robotmem_msgs</depend>
  <exec_depend>python3-robotmem-pip</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
